.ibm/pipelines/cluster/aks/manifest/aks-operator-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rhdh-ingress
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backstage-rhdh
                port:
                  name: http-backend
